# PPC-Altivec-IDA

./: CMakeLists.txt  README.md  makefile  plugin.cpp  ppcaltivec.sln  ppcaltivec.vcxproj
